@@ -7,10 +7,9 @@
 * @license https://www.gnu.org/licenses/gpl-2.0.html GNU General Public License, version 2 (one or other)
 */
 class AdminerVersionNoverify {
-	
+
 	function head() {
 		echo script("verifyVersion = function () {};");
-		return true;
 	}
-	
+
 }
